--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "dump-0.4b42.tar.gz:"	73c4995938ab80c1b959f29afe56c21484a38582
+  dump-0.4b42.tar.gz: 73c4995938ab80c1b959f29afe56c21484a38582
